--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-opencv-python
-keras==2.0.2
+opencv-python==3.2.0.7
+keras==2.0.6
 tensorflow==1.1.0
-flask
-numpy
+flask==0.11.1
+numpy==1.11.3
 h5py==2.6.0
-flask-cors
+flask-cors==2.1.2
+dask==0.15.1
+scipy==0.19.1
