fix: Add missing opencv to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Markdown==2.6.11
 MarkupSafe==1.1.1
 mock==3.0.5
 numpy==1.16.3
+opencv-python==4.1.0.25
 pip-tools==3.7.0
 protobuf==3.7.1
 PyYAML==5.1
